fix: fix config tenant and supply manager for tenants